# suv_car

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/rslidar_driver/: rslidarNodeConfig.h
devel/include/rslidar_msgs/: rslidarPacket.h  rslidarScan.h
devel/include/rslidar_pointcloud/: CloudNodeConfig.h
devel/lib/car_tf_broadcaster/: car_tf_broadcaster
devel/lib/pkgconfig/: car_tf_broadcaster.pc  nmea_driver.pc  plane_ground_filter.pc  ray_ground_filter.pc  rslidar_driver.pc  rslidar_msgs.pc  rslidar_pointcloud.pc  rslidar_sync.pc  voxel_filter.pc  xavier_upstart.pc
devel/lib/rslidar_driver/: rslidar_node
devel/lib/rslidar_pointcloud/: cloud_node
devel/lib/rslidar_sync/: rslidar_sync_2lidar_node  rslidar_sync_3lidar_node
devel/lib/xavier_upstart/: 2
devel/share/car_tf_broadcaster/cmake/: car_tf_broadcasterConfig.cmake
devel/share/nmea_driver/cmake/: nmea_driverConfig.cmake
devel/share/plane_ground_filter/cmake/: plane_ground_filterConfig.cmake
devel/share/ray_ground_filter/cmake/: ray_ground_filterConfig.cmake
devel/share/rslidar_driver/cmake/: rslidar_driverConfig.cmake
devel/share/rslidar_msgs/cmake/: rslidar_msgs-msg-paths.cmake  rslidar_msgsConfig.cmake
devel/share/rslidar_pointcloud/cmake/: rslidar_pointcloudConfig.cmake
devel/share/rslidar_sync/cmake/: rslidar_syncConfig.cmake
devel/share/voxel_filter/cmake/: voxel_filterConfig.cmake
devel/share/xavier_upstart/cmake/: xavier_upstartConfig.cmake
src/car_tf_broadcaster/: CMakeLists.txt  package.xml
src/car_tf_broadcaster/src/: car_tf_broadcaster.cpp
src/chasis_driver/: CMakeLists.txt  package.xml
src/chasis_driver/src/: chasis_control_node.cpp  chasis_status_node.cpp  receive.cpp  send.cpp
src/mpc_follower/: CMakeLists.txt
src/mpc_follower/include/mpc_follower/: mpc_follower_core.h  mpc_trajectory.h
src/mpc_follower/launch/: mpc_follower.launch
src/mpc_follower/src/: mpc_follower_core.cpp  mpc_follower_node.cpp  mpc_read_traj.cpp  mpc_save_traj.cpp  mpc_utils.cpp  try.cpp
src/mpc_msgs/: CMakeLists.txt  package.xml
src/mpc_msgs/msg/: ControlCommand.msg
src/nmea_driver/: CMakeLists.txt  package.xml
src/nmea_driver/include/: serial_util.h  status_protocol.h
src/nmea_driver/launch/: nmea_driver.launch
src/nmea_driver/src/: nmea_driver_node.cpp  nmea_parser.cpp  nmea_parser.h  serial_util.cpp
src/perpection/multi_calib_ws/devel/: .catkin  .rosinstall  setup.sh
src/perpection/multi_calib_ws/src/multi_sensor_calib/: CMakeLists.txt  package.xml
src/perpection/multi_calib_ws/src/multi_sensor_calib/include/: multi_sensor_calib_core.h
src/perpection/multi_calib_ws/src/multi_sensor_calib/launch/: test.launch
src/perpection/multi_calib_ws/src/multi_sensor_calib/rviz/: test.rviz
src/perpection/multi_calib_ws/src/multi_sensor_calib/src/: multi_sensor_calib_core.cpp  multi_sensor_calib_node.cpp
src/perpection/rslidar_sdk/: CMakeLists.txt
src/perpection/rslidar_sdk/config/: config.yaml
src/perpection/rslidar_sdk/launch/: start.launch
src/perpection/rslidar_ws/plane_ground_filter/: CMakeLists.txt
src/perpection/rslidar_ws/voxel_filter/: CMakeLists.txt  package.xml  voxel_filter.xml
src/xavier_upstart/: CMakeLists.txt  package.xml
src/xavier_upstart/launch/: rslidar.launch  rviz.launch  suv_test.launch  xavier_upstart.launch
src/xavier_upstart/script/: 10-ths0.rules  delete_robot_upstart.sh  gps_path.txt  register_robot_upstart.sh  xavier_ros_setup.sh
src/xavier_upstart/src/: 2.cpp  gps_saver.cpp
(+34 files in other folders)
