<?xml version="1.0"?>
<package format="2">
  <name>xavier_upstart</name>
  <version>0.1.0</version>
  <description>package for xavier_upstart</description>
  <maintainer email="liu.hua.fengQ@qq.com">liu.hua.feng</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>autoware_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>autoware_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>
  
  <export></export>
</package>
